[package]
name = "win-ioring-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["sync", "time", "rt", "macros"] }
futures = "0.3"
bitflags = "2"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading"
]
