[package]
name = "win-ioring-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
bitflags = "2"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading"
]

[dev-dependencies]
tokio = { version = "1", features = ["time", "rt", "macros"] }
